--- a/apps/store/templates/core/product.html
+++ b/apps/store/templates/core/product.html
@@ -8,19 +8,17 @@
 <link rel="stylesheet" href="{% static '/scss/page/pages.css' %}" type="text/css">
 <link rel="stylesheet" href="{% static '/scss/store/product/product.css' %}" type="text/css">
 <script rel="stylesheet" src="{% static '/js/product.js' %}" type="text/javascript"></script>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
-     crossorigin=""/>
-      <!-- Make sure you put this AFTER Leaflet's CSS -->
- <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
- integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
- crossorigin=""></script>
+link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.css' type='text/css' />
+<link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
+<script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
+<script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js'></script>
+<script src="https://unpkg.com/@turf/turf@6/turf.min.js"></script>
 
 <!-- Only on some pages -->
-   <div class="nav-search" id="productSearch">
+   <div class="product-search" id="productSearch">
     <form id="searchForm" action="{% url 'home_page_search' %}" method="GET">
        {% csrf_token %}
-       <input name="q" type="text" placeholder="Søk blant 500 tjenester"><i class="fa-solid fa-magnifying-glass"></i>
+       <input name="q" type="text" placeholder="Søk blant 500 tjenester"><button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
    </form>
  </div>
  <div class="page">
@@ -31,24 +29,78 @@
                 <img class="product-image" src="{{product.image.url}}" alt="product image">
               </div>
               <div class="carousel-item">
-                <img class="product-image" src="{{product.image}}" alt="product image">
+                <img class="product-image" src="{{product.image.url}}" alt="product image">
               </div>
               <div class="carousel-item">
-                <img class="product-image" src="{{product.image}}" alt="product image">
+                <img class="product-image" src="{{product.image.url}}" alt="product image">
               </div>
             </div>
             <a data-slide="prev" role="button" class="carousel-control-prev" href="#carouselExampleControls">&#10094;</a>
             <a data-slide="next" role="button" class="carousel-control-next" href="#carouselExampleControls">&#10095;</a>
+          </div>
+          <div class="quick-links">
+            <a class="active">Beskrivelse</a>
+            <a>Vurderinger</a>
+            <a>Kontakt</a>
           </div>
          <div class="text">
              <div class="reviews">
                  <p><i class="fa-solid fa-star"></i>3</p><span>(40)</span>
                 </div>
                 <div class="name">{{product.name}}</div>
-                <div class="business-name">{{product.business_name}}</div>
-            </div>
+                <div class="business-name"><i class="fa-solid fa-circle-user"></i>{{product.business_name}}</div>
+          </div>
+
+          <div class="text info" id="info">
+            <h1>Beskrivelse</h1>
+            <p class="">{{product.description}}</p>
+          </div>
+
+          <hr style="margin-block: 38px;">
+
+          <div class="text location" id="location">
+            <h1>Plassering</h1>
+            <div id='map' style="width: 100%; height: 400px;"></div>
+          </div>
         </div>
-</div>
+      </div>
+
+<script type="text/javascript">
+ mapboxgl.accessToken = '{{mapbox_access_token}}';
+  const map = new mapboxgl.Map({
+    container: 'map', // Specify the container ID
+    style: 'mapbox://styles/bogdantro/cld3lse3v000301lidywd9qfs',
+    center: ['{{product.cords1}}', '{{product.cords2}}'], // Specify the starting position
+    zoom: 13, // Specify the starting zoom
+  });
+
+  /* 
+Add an event listener that runs
+  when a user clicks on the map element.
+*/
+map.on('click', (event) => {
+  // If the user clicked on one of your markers, get its information.
+  const features = map.queryRenderedFeatures(event.point, {
+    layers: ['lillehammer'] // replace with your layer name
+  });
+  if (!features.length) {
+    return;
+  }
+  const feature = features[0];
+
+  // Code from the next step will go here.
+  /* 
+    Create a popup, specify its options 
+    and properties, and add it to the map.
+  */
+const popup = new mapboxgl.Popup({ offset: [0, -15] })
+  .setLngLat(feature.geometry.coordinates)
+  .setHTML(
+    `<h3>${feature.properties.title}</h3><p>${feature.properties.description}</p>`
+  )
+  .addTo(map);
+});
+</script>
 
 <br>
 <br>
