--- a/static/scss/global/global.css
+++ b/static/scss/global/global.css
@@ -11,6 +11,8 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   background: rgb(249, 249, 249) !important;
+  max-width: 1180px;
+  margin: auto;
 }
 
 button {
