--- a/static/scss/global/global.scss
+++ b/static/scss/global/global.scss
@@ -17,6 +17,8 @@ html, body {
   overflow-x: hidden;
   scroll-behavior: smooth;
   background:  rgb(249,249,249) !important;
+  max-width: 1180px;
+  margin: auto;
 }
 // global divs
 button{
