--- a/static/scss/store/base.scss
+++ b/static/scss/store/base.scss
@@ -36,7 +36,7 @@ $txt: #183b56;
         color: $white;
         font-size: 26px;
         margin-bottom: 15px;
-        font-weight: 800;
+        font-weight: 600;
       }
       .paragraph{
         margin-top: 0;
@@ -266,6 +266,20 @@ $txt: #183b56;
         transform: scale(1.08);
         filter: brightness(93%);
       }
+    }
+  }
+}
+
+// Categories
+.map{
+  width: 100%;
+  height: auto;
+  .content{
+    padding: 0 18px;
+    padding-top: 5px;
+    padding-bottom: 20px;
+    .text{
+      text-align: left;
     }
   }
 }
