--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -9,7 +9,7 @@ $txt: #183b56;
     height: 100%;
     padding-block: 8px;
     position: relative;
-    background: white;
+    background: $primBtn;
     .footer-links{
         width: 100%;
         padding-inline: 18px;
@@ -18,7 +18,7 @@ $txt: #183b56;
             margin-block: 6px;
             width: 100%;
             display: inline-block;
-            color: $txt;
+            color: $white;
             font-size: 16px;
             cursor: pointer;
             &:hover{
@@ -49,12 +49,9 @@ $txt: #183b56;
                     border-radius: 4px;
                     font-size: 21px;
                     padding: 10px;
-                    color: $txt;
+                    color: $white;
                     margin-inline: 3px;
                     cursor: pointer;
-                    &:hover{
-                        color: #0082ec;
-                    }
                 }
             }
         }
@@ -66,7 +63,7 @@ $txt: #183b56;
             p{
                 padding: auto;
                 margin: auto;
-                color: $txt;
+                color: $white;
                 font-size: 13px;
             }
         }
