--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -9,7 +9,7 @@ $txt: #183b56;
     height: 100%;
     padding-block: 8px;
     position: relative;
-    background: $primBtn;
+    background: white;
     .footer-links{
         width: 100%;
         padding-inline: 18px;
@@ -18,7 +18,7 @@ $txt: #183b56;
             margin-block: 6px;
             width: 100%;
             display: inline-block;
-            color: $white;
+            color: $txt;
             font-size: 16px;
             cursor: pointer;
             &:hover{
@@ -49,7 +49,7 @@ $txt: #183b56;
                     border-radius: 4px;
                     font-size: 21px;
                     padding: 10px;
-                    color: $white;
+                    color: $txt;
                     margin-inline: 3px;
                     cursor: pointer;
                 }
@@ -63,7 +63,7 @@ $txt: #183b56;
             p{
                 padding: auto;
                 margin: auto;
-                color: $white;
+                color: $txt;
                 font-size: 13px;
             }
         }
