--- a/static/scss/store/product/product.css
+++ b/static/scss/store/product/product.css
@@ -218,7 +218,7 @@
   margin-right: 6px;
 }
 .product-section #infoSec {
-  display: none;
+  display: block;
 }
 .product-section #infoSec.hidden {
   display: none;
@@ -297,7 +297,7 @@
   margin-top: 0;
 }
 .product-section #reviewsSec {
-  display: block;
+  display: none;
 }
 .product-section #reviewsSec.active {
   display: block;
@@ -312,9 +312,114 @@
   font-size: 22.5px;
   color: #183b56;
   font-weight: 500;
+  margin-bottom: 17px;
 }
 .product-section #reviewsSec .reviews p {
   color: #183b56;
   font-size: 15px;
   opacity: 0.8;
+}
+.product-section #reviewsSec .reviews .no-reviews {
+  margin-top: 3px;
+  opacity: 1;
+  font-size: 17px;
+  border-left: 10px solid #06c484;
+  padding-left: 10px;
+  padding-right: 5px;
+  background: rgba(190, 190, 190, 0.1);
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.product-section #reviewsSec .reviews .add-review-btn {
+  margin-block: 10px;
+  width: 100%;
+  color: rgb(246, 246, 246);
+  background: #06c484;
+  text-align: center;
+  padding: 13px 5px;
+  outline: none;
+  border: none;
+  border-radius: 4px;
+}
+.product-section #reviewsSec .reviews .add-review-txt {
+  text-align: center;
+}
+.product-section #reviewsSec .reviews #reviewCard {
+  width: 100%;
+  background: white;
+  padding: 11px;
+  border-radius: 4px;
+  margin-block: 20px;
+}
+.product-section #reviewsSec .reviews #reviewCard:first-child {
+  margin-top: 0;
+}
+.product-section #reviewsSec .reviews #reviewCard:last-child {
+  margin-bottom: 0;
+}
+.product-section #reviewsSec .reviews #reviewCard .title {
+  font-size: 17px;
+  margin-bottom: 3px;
+}
+.product-section #reviewsSec .reviews #reviewCard .date {
+  font-size: 13px;
+  opacity: 0.7;
+  margin-bottom: 9px;
+}
+.product-section #reviewsSec .reviews #reviewCard .stars {
+  display: flex;
+  margin-block: 3px;
+}
+.product-section #reviewsSec .reviews #reviewCard .stars p {
+  margin-bottom: 0;
+  color: #FFBC55;
+  font-size: 12px;
+  margin-top: 1px;
+}
+.product-section #reviewsSec .reviews #reviewCard .stars p i {
+  transform: translateY(-0.9px);
+  margin-right: 3px;
+  font-size: 11px;
+}
+.product-section #reviewsSec .reviews #reviewCard .content {
+  font-size: 14px;
+  margin-bottom: 0;
+  opacity: 0.9;
+}
+.product-section #reviewsSec .reviews #reviewCard .conf {
+  opacity: 0.8;
+  color: #06c484;
+  font-size: 11px;
+}
+.product-section #reviewsSec .reviews #reviewCard .conf i {
+  margin-right: 6px;
+}
+.product-section #contactSec {
+  display: none;
+}
+.product-section #contactSec.hidden {
+  display: none;
+}
+.product-section #contactSec.active {
+  display: block;
+}
+.product-section #contactSec .contact {
+  margin-top: 38px;
+}
+.product-section #contactSec .contact h1 {
+  font-size: 22.5px;
+  color: #183b56;
+  font-weight: 500;
+}
+.product-section #contactSec .contact p {
+  color: #183b56;
+  font-size: 15px;
+  opacity: 0.8;
+}
+.product-section #contactSec .contact a {
+  font-size: 15px;
+  opacity: 0.8;
+  text-decoration: underline;
+  cursor: pointer;
 }/*# sourceMappingURL=product.css.map */
