--- a/static/scss/store/product/product.scss
+++ b/static/scss/store/product/product.scss
@@ -206,7 +206,7 @@ $txt: #183b56;
         }
     }
     #infoSec{ 
-        display: none;
+        display: block;
         &.hidden{
             display: none;
         }
@@ -285,7 +285,7 @@ $txt: #183b56;
         }
     }
     #reviewsSec{
-        display: block;
+        display: none;
         &.active{
             display: block;
         }
@@ -298,11 +298,114 @@ $txt: #183b56;
                 font-size: 22.5px;
                 color: $txt;
                 font-weight: 500;
+                margin-bottom: 17px;
             }
             p{
                 color: $txt;
                 font-size: 15px;
                 opacity: 0.8;
+            }
+            .no-reviews{
+                margin-top: 3px;
+                opacity: 1;
+                font-size: 17px;
+                border-left: 10px solid $primBtn;
+                padding-left: 10px;
+                padding-right: 5px;
+                background: rgba(190,190,190,0.1);
+                width: max-content;
+            }
+            .add-review-btn{
+                margin-block: 10px;
+                width: 100%;
+                color: $white;
+                background: $primBtn;
+                text-align: center;
+                padding: 13px 5px;
+                outline: none;
+                border: none;
+                border-radius: 4px;
+            }
+            .add-review-txt{
+                text-align: center;
+            }
+            #reviewCard{
+                width: 100%;
+                background: white;
+                padding: 11px;
+                border-radius: 4px;
+                margin-block: 20px;
+                &:first-child{
+                    margin-top: 0;
+                }
+                &:last-child{
+                    margin-bottom: 0;
+                }
+                .title{
+                    font-size: 17px;
+                    margin-bottom: 3px;
+                }
+                .date{
+                    font-size: 13px;
+                    opacity: 0.7;
+                    margin-bottom: 9px;
+                }
+                .stars{
+                    display: flex;
+                    margin-block: 3px;
+                    p{
+                      margin-bottom: 0;
+                      color: #FFBC55;
+                      font-size: 12px;
+                      margin-top: 1px;
+                      i{
+                        transform: translateY(-0.9px);
+                        margin-right: 3px;
+                        font-size: 11px;
+                      }
+                    }
+                }
+                .content{
+                    font-size: 14px;
+                    margin-bottom: 0;
+                    opacity: 0.9;
+                }
+                .conf{
+                    opacity: 0.8;
+                    color: $primBtn;
+                    font-size: 11px;
+                    i{
+                        margin-right: 6px;
+                    }
+                }
+            }
+        }
+    }
+    #contactSec{
+        display: none;
+        &.hidden{
+            display: none;
+        }
+        &.active{
+            display: block;
+        }
+        .contact{
+            margin-top: 38px;
+            h1{
+                font-size: 22.5px;
+                color: $txt;
+                font-weight: 500;
+            }
+            p{
+                color: $txt;
+                font-size: 15px;
+                opacity: 0.8;
+            }
+            a{
+                font-size: 15px;
+                opacity: 0.8;
+                text-decoration: underline;
+                cursor: pointer;
             }
         }
     }
